--- a/global.css
+++ b/global.css
@@ -67,12 +67,12 @@ header {
   border-radius: 0;
 }
 
-main {
+/* main {
   position: relative;
   width: 100%;
   overflow: hidden;
   height: calc(100vh - 39px - 58px);
-}
+} */
 
 .grid-wrapper {
   position: absolute;
@@ -82,11 +82,59 @@ main {
   height: 100%;
 }
 
-#fileContents {
+/* #fileContents {
   position: absolute;
   top: 0;
   z-index: 99;
   left: 0;
   width: 100%;
   height: 100%;
+} */
+
+.fileContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 39px - 58px);
+}
+
+#fileContents {
+  /* width: 100%; */
+  height: 100%;
+}
+
+.mainDiv {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+}
+
+/* .resizable-div {
+  display: none;
+  height: 50%;
+  min-height: 300px;
+  width: 50%;
+  min-width: 220px;
+  max-width: 600px;
+  background-color: #f0f0f0;
+  padding: 20px;
+  box-sizing: border-box;
+  resize: both;
+  overflow: auto;
+  position: relative;
+} */
+
+#resizeContainer {
+  width: 100%;
+  background-color: #f0f0f0;
 }
