--- a/global.css
+++ b/global.css
@@ -2,6 +2,9 @@ html,
 body {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
 
 * {
@@ -67,13 +70,6 @@ header {
   border-radius: 0;
 }
 
-/* main {
-  position: relative;
-  width: 100%;
-  overflow: hidden;
-  height: calc(100vh - 39px - 58px);
-} */
-
 .grid-wrapper {
   position: absolute;
   top: 0;
@@ -81,15 +77,6 @@ header {
   width: 100%;
   height: 100%;
 }
-
-/* #fileContents {
-  position: absolute;
-  top: 0;
-  z-index: 99;
-  left: 0;
-  width: 100%;
-  height: 100%;
-} */
 
 .fileContainer {
   display: flex;
@@ -103,6 +90,7 @@ main {
   justify-content: center;
   align-items: center;
   height: calc(100vh - 39px - 58px);
+  width: 100%;
 }
 
 #fileContents {
@@ -119,22 +107,7 @@ main {
   height: 80vh;
 }
 
-/* .resizable-div {
-  display: none;
-  height: 50%;
-  min-height: 300px;
-  width: 50%;
-  min-width: 220px;
-  max-width: 600px;
-  background-color: #f0f0f0;
-  padding: 20px;
-  box-sizing: border-box;
-  resize: both;
-  overflow: auto;
-  position: relative;
-} */
-
 #resizeContainer {
   width: 100%;
-  background-color: #f0f0f0;
+  background-color: #f0f0f075;
 }
